--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,4 @@
 title: "About"
 ---
 
-Abigail Burns is a graduate student at the University of Texas at Dallas and serves as GIS Analyst for the Town of Prosper.
+I am a graduate student at the University of Texas at Dallas studying a Master of Science in Social Data Analytics and Research. I currently serve as GIS Analyst for the Town of Prosper in the Dallas-Fort Worth region of Texas.
