--- a/docs/Group_finalproject.Rmd
+++ b/docs/Group_finalproject.Rmd
@@ -10,10 +10,6 @@ output:
 
 **Data Visualization flexdashboard | Abigail Burns, Sharon Jepkosgei, Chizoma Oparaji, Jannelle Marie Navales**
 
-<p>
-Data Visualization flexdashboard | Abigail Burns, Sharon Jepkosgei, Chizoma Oparaji, Jannelle Marie Navales
-</p>
-
 <div id="storytelling-with-data" class="section level3">
 
 <h3>Storytelling with Data</h3>
@@ -24,28 +20,20 @@ Data Visualization flexdashboard | Abigail Burns, Sharon Jepkosgei, Chizoma Opar
 
 </p>
 
-<p>
-
-<center>
+<p><center>
 Abigail Burns, 
 Sharon Jepkosgei, 
 Chizoma Oparaji, 
 Jannelle Marie Navales
-</center>
+</center></p>
 
-</p>
-
-<p>
-
-<center><img src="https://github.com/abiburns/abiburns.github.io/raw/main/headerpic.png" width="600"/></center>
-
-</p>
+<p><center><img src="https://github.com/abiburns/abiburns.github.io/raw/main/headerpic.png" width="600"/></center></p>
 
 ### Introduction
 
 **Purpose**
 
-This project is about visualization of the spending on prescription drugs and effect of regulations.
+This project illustrates public spending on prescription drugs and the effect of regulatory legislation over time.
 
 **Background**
 
@@ -121,13 +109,9 @@ line_plot
 
 ------------------------------------------------------------------------
 
--   The prices of various prescription have been on the rise in the past decades
+-   The prices of popular statins (medicines which lower blood cholesterol levels) have been on the rise in the past decade
 
--   These are some of the commonly used medications
-
-Statins- used to lower cholesterol levels
-
--   The highest between 2014 and 2018
+-   Biggest increase between 2016 and 2018, which was a period of high economic growth
 
 ### Inhalers {.no-padding}
 
@@ -176,7 +160,9 @@ line_plot
 
 ------------------------------------------------------------------------
 
-### Case Study: Diabetes Prescriptions {.no-padding}
+-   The prices of popular antianaphylactics (medicines which treat and prevent allergic reactions) peaked between 2018-2019
+
+### Insulin {.no-padding}
 
 ```{r echo=FALSE, message=FALSE}
 
@@ -227,18 +213,16 @@ line_plot
 
 **Rising Prices**
 
--   Over the past two decades pharmaceutical manufacturers have increased list prices on insulin each year
--   Over 9 million Americans rely on insulin, and they have been raising red flags over soaring prices for years.
+-   Over the past two decades, pharmaceutical manufacturers have increased list prices on insulin each year
+-   Over 9 million Americans rely on insulin, and they have been raising red flags over soaring prices for years
 
 **Trend**
 
--   From January 2014 to April 2019
+-   The average cash price per insulin unit rose 54% from Jan. 2014 to April 2019
 
--   The average cash price per insulin unit rose 54%
+-   Dosage price then dropped 10.6% from Jan. 2020 to July 2023, a period of economic decline
 
--   Then, from January 2020 to July 2023, it dropped by 10.6%.
-
-### Diabetes Prescription Use Over time {.no-padding}
+### Diabetes Prescription Usage Over Time {.no-padding}
 
 ```{r echo=FALSE, message=FALSE}
 
@@ -331,15 +315,15 @@ fig
 
 **High costs, High risks**
 
--   A drop in diabetes medication use in 2018
+-   There was a drop in diabetes medication use in 2018 which has not since recovered
 
--   The high cost of insulin forced many people to ration the medication
+-   The high cost of insulin forced many people to ration their usage
 
--   People in the U.S. either skip, delay or use less insulin than was needed in the year to save money
+-   People in the U.S. either skip, delay or use less insulin than is needed on a daily basis throughout the year
 
--   Rationing can have dire consequences.
+-   Insulin rationing can have dire health consequences
 
-### Comparing with Other Countries: 2018 {.no-padding}
+### Comparing with Other Developed Countries: 2018 {.no-padding}
 
 ```{r echo=FALSE, message=FALSE}
 #install.packages("shadowtext")
@@ -427,42 +411,42 @@ print(plt)
 
 **Analysis**
 
--   We found a possible explanation for the drop in diabetes prescription use in 2018.
+-   We found a possible explanation for the drop in insulin usage in 2018
 
--   According to the chart, in 2018, the average list price for one vial of insulin in the U.S. was \$98.70
+-   According to the chart, in 2018, the average list price for one vial of insulin in the U.S. was $98.70
 
--   Up to 10 times more than other countries in the OECD.
+-   This dosage price is up to 10x more than other countries in the OECD
 
-**Why is this important**
+**Why is this important?**
 
--   People with Type 1 diabetes need, on average 1 to 3 vials of insulin per month. 
+-   People with Type 1 diabetes need on average 1 to 3 vials of insulin per month 
 
--   Patients with Type 2 diabetes don't always need to take insulin, but those who do can sometimes require more than people with Type 1 diabetes.
+-   Patients with Type 2 diabetes don’t always need to take insulin, but those who do can sometimes require more than those with Type 1
 
 ### Insulin Regulation
 
-**Inflation Reduction Act (IRA)**
+**Inflation Reduction Act (IRA): Effect on Manufacturers**
 
--   It went into effect in January 2023
+<p><img src="https://github.com/abiburns/abiburns.github.io/raw/main/IRApic.png" width="400"/></p>
 
--   Patients who are covered under the Medicare Part D plan now have a \$35 out-of-pocket monthly cap for their insulin.
+<p>
+-   Went into effect in January 2023
 
--   Higher rebates, even exceeding 100% of a drug's price, in cases when manufacturers have raised list prices sharply over time and have offered substantial rebates triggering large best price discounts.
+-   Patients who are covered under the Medicare Part D plan now have a $35 out-of-pocket monthly cap for their insulin
 
-    **Effect of IRA on Manufacturers**
-
-    Under the IRA, manufacturers will face penalties in Medicare for raising list prices faster than inflation
+-   Higher rebates, even exceeding 100% of a drug’s price, in cases when manufacturers have raised list prices sharply over time triggering large best price discounts
+</p>
 
 ### Impact of Legislation: Consumers {.no-padding}
 
-```{r echo=FALSE, message=FALSE}
+```{r, echo=FALSE, message=FALSE}
 # Map IRA annual savings by state
 library(sf)
-library(readxl)
 library(readr)
 library(ggplot2)
 library(RColorBrewer)
 library(plotly)
+library(png)
 
 # Read shapefile
 download.file(
@@ -479,7 +463,6 @@ mapData <- read_csv(url)
 
 # Merge attribute
 map <- merge(states, mapData, by.x = "STATE_NAME", by.y = "State Name")
-head(map)
 
 # Download image
 download.file(
@@ -513,33 +496,36 @@ choropleth <- (
 )
 
 ggplotly(choropleth, tooltip="Average Annual Out-of-Pocket Savings Per Enrollee ($)")
+
 ```
 
 ------------------------------------------------------------------------
 
-The map shows the estimated out-of-pocket savings if IRA had been in effect in 2020, by state
+<p><center><img src="https://github.com/abiburns/abiburns.github.io/raw/main/colorbarlegend.png" width="300" /></center></p>
 
--   webscraped data from report
+The map shows the estimated out-of-pocket savings by state if the IRA had been in effect in 2020
 
--total savings to beneficiaries - \$734 million in Part D and \$27 million in Part B
+-   Webscraped data from USDHHS report
 
--   an average savings of approximately \$500 for those Medicare beneficiaries.
+-   Total savings to beneficiaries: $734 million in Part D and $27 million$27 million in Part B
 
--   The states with the most people with Medicare projected to benefit from the new IRA insulin cost savings:
+-   Average yearly savings of approximately $500 for Medicare beneficiaries
 
-Texas -114,000 beneficiaries
+-   States with the most people on Medicare projected to benefit from the new IRA insulin cost savings:
 
-California -108,000
+Texas 114,000 beneficiaries
 
-Florida -90,000
+California 108,000
 
--   **Highest average annual out-of-pocket savings**
+Florida 90,000
 
-North Dakota - \$805
+-   Highest average annual out-of-pocket savings:
 
-Iowa - \$725
+North Dakota $805
 
-South Dakota - \$725
+Iowa $725
+
+South Dakota $725
 
 ### Impact of Legislation: Corporations {.no-padding}
 
@@ -615,7 +601,7 @@ fig
 
 -   Facing pressure to curb diabetes-treatment costs, Eli Lilly & Co. announced on March 1 that it is slashing insulin prices
 
--   They immediately capped the out-of-pocket cost of all of its insulin at \$35 a month.
+-   They immediately capped the out-of-pocket cost of all of its insulin at \$35 a month
 
 -   The graph shows Eli Lilly & Co. stock prices from June 2022 to most recent data
 
@@ -625,9 +611,9 @@ fig
 
 -   IRA only applies to those with Medicare
 
--   But, medicare is the largest single purchaser of prescription drugs in the US.
+-   But, medicare is the largest single purchaser of prescription drugs in the US
 
--   This might further deter drug makers from increasing prices each year while offering greater rebates to insurers.
+-   This might further deter drug makers from increasing prices each year while offering greater rebates to insurers
 
 ### Impact of Legislation: Corporations {.no-padding}
 
@@ -727,13 +713,11 @@ plt3
 
 ------------------------------------------------------------------------
 
-The graph shows how affordability of prescription medication varies by:
+The graph shows how affordability of prescription medication varies by insurance, coverage type, and income.
 
--   insurance, coverage type, and income.
+-   Affordability problems increase as income falls and are much higher among those without insurance coverage
 
--   Affordability problems increase as income falls and are much higher among those without insurance coverage.
-
--   People with diabetes enrolled in high-deductible plans report greater affordability problems than those in conventional private insurance plans.
+-   People with diabetes enrolled in high-deductible plans report greater affordability problems than those in conventional private insurance plans
 
 ### Affordability
 
@@ -780,11 +764,13 @@ ggplot(afford_data_long, aes(x = Column1, y = Value, fill = Year)) +
 
 -   Prices increased rapidly between 2007 and 2017
 
--   But, coverage expansions reduced the share of those with diabetes in each income group who reported difficulty affording prescription drugs.
+-   But, coverage expansions reduced the share of those with diabetes in each income group who reported difficulty affording prescription drugs
 
 -   The greatest declines have been among people with incomes between 100 percent and 300 percent of the federal poverty level
 
 ### Takeaways
+
+**Case for Medicaid expansion**
 
 Our analysis suggests that the most important factors affecting the affordability of insulin:
 
@@ -794,10 +780,8 @@ Our analysis suggests that the most important factors affecting the affordabilit
 
 People with adequate coverage are often shielded from these price increases.
 
-**Medicaid expansion**
+Medicaid also provides patients with diabetes and other diseases
 
-people with diabetes who can enroll in Medicaid are protected from:
+-   more predictable out-of-pocket expenses
 
--   high out-of-pocket costs for prescription
-
--   high costs for other dimensions of their care
+-   better access to regular care
