--- a/index.qmd
+++ b/index.qmd
@@ -2,4 +2,4 @@
 title: "Abigail Burns"
 ---
 
-Welcome to my Quarto website where I host projects, data stories and more. I am a graduate student at the University of Texas at Dallas studying a Master of Science in Social Data Analytics and Research. I currently serve as GIS Analyst for AECOM, an infrastructure consulting firm in Dallas, Texas.
+Welcome to my Quarto website where I host projects, data stories and more. I am a graduate student at the University of Texas at Dallas studying a Master of Science in Social Data Analytics and Research. I currently serve as GIS Analyst for AECOM, an engineering consulting firm in Dallas, Texas.
